# mmtisobmff

./: .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE.txt  README.md  sanitizer-ignorelist.txt
demo/: CMakeLists.txt  advanced_file_reader.cpp  mp4_combine.cpp  mp4_defragment.cpp  mp4_fragment.cpp  mp4_samples_diff.cpp  mp4_segment.cpp  print_mp4_boxes.cpp  seeking_and_timestamps_api_demo.cpp  simple_file_reader.cpp  simple_file_reader_c.c  simple_file_writer.cpp  simple_memory_reader_c.c
doc/: CMakeLists.txt  Doxyfile.in  mainpage.md
include/mmtisobmff/: logging.h  mmtisobmff_c.h  specificboxinfo.h  types.h
include/mmtisobmff/configdescriptor/: avc_decoderconfigrecord.h  hevc_decoderconfigrecord.h  jxs_decoderconfigrecord.h  mha_decoderconfigrecord.h  mp4a_decoderconfigrecord.h  vvc_decoderconfigrecord.h
include/mmtisobmff/helper/: commonhelpertools.h  printhelpertools.h  videohelpertools.h
include/mmtisobmff/reader/: input.h  reader.h  trackreader.h
include/mmtisobmff/writer/: advancedwriter.h  output.h  trackwriter.h  writer.h
src/: CMakeLists.txt  mmtisobmff.version  mmtisobmff_c.cpp  mmtisobmff_mac.version
src/box/: avcsampleentry.cpp  avcsampleentry.h  box.cpp  box.h  boxregistryentry.h  btrtbox.cpp  btrtbox.h  co64box.cpp  co64box.h  colrbox.cpp  colrbox.h  containerbox.cpp  containerbox.h  cttsbox.cpp  cttsbox.h  decoderconfigurationbasebox.h  decoderconfigurationbox.cpp  decoderconfigurationbox.h  decoderconfigurationfullbox.cpp  decoderconfigurationfullbox.h  decoderconfigurationprovider.h  drefbox.cpp  drefbox.h  elstbox.cpp  elstbox.h  ftypbox.cpp  ftypbox.h  hdlrbox.cpp  hdlrbox.h  hevcsampleentry.cpp  hevcsampleentry.h  ibox.h  invalidbox.cpp  invalidbox.h  iodsbox.cpp  iodsbox.h  jpvibox.cpp  jpvibox.h  jxplbox.cpp  jxplbox.h  (+68 more)
src/common/: bytebuffertools_extension.cpp  bytebuffertools_extension.h  commonhelpertools.cpp  internal_types.h  logging.cpp  logging.h  printhelpertools.cpp  restrictions.h  tracksampleinfo.h  types.cpp  videohelpertools.cpp
src/configdescriptor/: avc_decoderconfigrecord.cpp  hevc_decoderconfigrecord.cpp  jxs_decoderconfigrecord.cpp  mha_decoderconfigrecord.cpp  mp4a_decoderconfigrecord.cpp  vvc_decoderconfigrecord.cpp
src/descriptor/: basedescriptor.cpp  basedescriptor.h  decoderconfigdescriptor.cpp  decoderconfigdescriptor.h  decoderspecificinfo.h  esdescriptor.cpp  esdescriptor.h  esidincdescriptor.cpp  esidincdescriptor.h  genericdecoderspecificinfo.cpp  genericdecoderspecificinfo.h  ibasedescriptor.h  iodescriptor.cpp  iodescriptor.h  slconfigdescriptor.cpp  slconfigdescriptor.h
src/reader/: input.cpp  pimpl.h  reader.cpp  readerinfo.cpp  readerinfo.h  sample_extractor.cpp  sample_extractor.h  samplereader.cpp  samplereader.h  specificboxinfo.cpp  trackreader.cpp
src/service/: boxreader.cpp  boxreader.h  boxregistry.cpp  boxregistry.h  factory.cpp  factory.h  servicesingleton.cpp  servicesingleton.h
src/tree/: boxtree.cpp  boxtree.h  tree_parser.h
src/writer/: avc_tree_enhancer.cpp  avc_tree_enhancer.h  config_verifier.cpp  config_verifier.h  hevc_tree_enhancer.cpp  hevc_tree_enhancer.h  initsegment_tree_builder.cpp  initsegment_tree_builder.h  jxs_tree_enhancer.cpp  jxs_tree_enhancer.h  mediafragment_tree_builder.cpp  mediafragment_tree_builder.h  mp4a_tree_enhancer.cpp  mp4a_tree_enhancer.h  mpegh_tree_enhancer.cpp  mpegh_tree_enhancer.h  output.cpp  sample_store.cpp  sample_store.h  samplegroupsEnhancerConfig.h  trackwriter.cpp  traf_sample_enhancer.cpp  traf_sample_enhancer.h  traf_samplegroups_enhancer.cpp  traf_samplegroups_enhancer.h  traf_tree_enhancer.cpp  traf_tree_enhancer.h  trak_editlist_enhancer.cpp  trak_editlist_enhancer.h  trak_sample_enhancer.cpp  trak_sample_enhancer.h  trak_samplegroups_enhancer.cpp  trak_samplegroups_enhancer.h  trak_tree_enhancer.cpp  trak_tree_enhancer.h  trak_userdata_enhancer.cpp  trak_userdata_enhancer.h  treebuilder.h  treeenhancer.h  vvc_tree_enhancer.cpp  (+4 more)
